--- a/trendshoes/templates/confirmation.html
+++ b/trendshoes/templates/confirmation.html
@@ -224,6 +224,10 @@
       
     </footer>
     <!-- End footer Area -->
+    
+    <script>
+      let razorKey = "{{ razor_key }}"
+  </script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
